2010-08-03  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Antonio Gomes.

        Fix warning in WebCore/rendering/RenderBoxModelObject.cpp
        https://bugs.webkit.org/show_bug.cgi?id=43412

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::clipBorderSidePolygon): Remove useless assignment.


Canonical link: https://commits.webkit.org/55375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64553 268f45cc-cd09-0410-ab3c-d52691b4dbfc