WebCore/rendering/RenderBoxModelObject.cpp
@@ -1526,7 +1526,7 @@ void RenderBoxModelObject::clipBorderSidePolygon(GraphicsContext* graphicsContex
     firstQuad[0] = quad[0];
     firstQuad[1] = quad[1];
     firstQuad[2] = side == BSTop || side == BSBottom ? FloatPoint(quad[3].x(), quad[2].y())
-        : firstQuad[2] = FloatPoint(quad[2].x(), quad[3].y());
+        : FloatPoint(quad[2].x(), quad[3].y());
     firstQuad[3] = quad[3];
     graphicsContext->clipConvexPolygon(4, firstQuad, !firstEdgeMatches);
 
